correcting broken text alignment in firefox

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -267,7 +267,6 @@ body {
 }
 
 .warp-connections__text, .warp-connections__subtext {
-  alignment-baseline: central;
   fill: white;
   stroke: white;
   stroke-width: 0;
